nginxplus/back/nginxplus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginxplus
spec:
  rules:
  - host: k8s.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: mirror.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: status.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: www.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: http
  - host: wiki.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: confluence
          servicePort: http
  - host: alert.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: http
  - host: prom.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: http
  - host: grafana.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: http
